--- a/style.css
+++ b/style.css
@@ -3,33 +3,29 @@
 /*Headings*/
 h1{
   text-align: centre;
-  colour: #edf756;
+  colour:white;
 }
 
 h2{
-  colour: #edf756;
+  colour:white;
   
 }
 
 /*Line*/
 hr{
-  color: #edf756;
+  color:white;
   border: none;
 }
 
 /*Images*/
-left{
-  float: left;
-  margin-left: 10px 0px 0px 30px;
-  width: 150px;
-  height: 38px;
+.row {
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: space-around
 }
-right{
-  float: right;
-  margin-right: 10px 30px 0px 0px;
-  width: 150px;
-  height: 38px;
-}
+img {
+  width:200px;
+  height:auto;
 
 /*Background colour*/
 body{
@@ -38,5 +34,5 @@ body{
 
 /*Main paragraph text*/
 p {
-  color:#edf756;
+  color:white;
 }
