--- a/style.css
+++ b/style.css
@@ -26,6 +26,6 @@ img {
 body{
   background-image:url("Background.png");
   background-size:cover;
-  backgroun-repeat:no-repeat;
+  background-repeat:no-repeat;
 }
 
