--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
 /*Headings*/
 h1{
   text-align: centre;
-  color:#5f5f5f;
+  color:#000000;
+  background-color:#8bf3f5;
 }
 h2{
-  color:#5f5f5f;
+  color:#000000;
 }
 /*Line*/
 hr{
@@ -22,7 +23,7 @@ hr{
 }
 img {
   width:200px;
-  height:auto;
+  height:50;
   border:2px;
   border-color:#000000;
 }
